--- a/README
+++ b/README
@@ -3,6 +3,5 @@ Zyjacya
 
 Sekai is a free, open-source, and standalone world-engine for D&D. (5e supported currently). 
 
-The intent of this project is to offer both a world-engine and a toolbox to Dungeon Masters which allows them to develop settings with
-greater detail and fluidity.
-
+The intent of this project is assist Dungeon Masters create more detailed, fluid, and connected settings by providing them with
+the toolbox and world-engine to do so.
