--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Zyjacya
 Sekai is a free, open-source, and standalone world-engine for D&D. (5e supported currently). 
 
 The intent of this project is assist Dungeon Masters create more detailed, fluid, and connected settings by providing them with
-the toolbox and world-engine to do so.
+the toolbox, world-engine, and coding framework to do so. 
