--- a/README
+++ b/README
@@ -1,7 +1,13 @@
 Sekai
+
 Zyjacya
+
+----------------------------------------------------------------------------------
 
 Sekai is a free, open-source, and standalone world-engine for D&D. (5e supported currently). 
 
-The intent of this project is assist Dungeon Masters create more detailed, fluid, and connected settings by providing them with
-the toolbox, world-engine, and coding framework to do so. 
+The intent of this project is to support the creation of more detailed, fluid, and interconnected settings
+by providing those who create them with a framework, engine, and toolbox to do so.
+
+
+
